--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
+  },
+
   "dependencies": {
     "express": "^4.18.2",
     "start": "node index.js"
