--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "index.js",
+    "test": "index.js"
   },
 
   "dependencies": {
