--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "node index.js"
   },
 
   "dependencies": {
-    "express": "^4.18.2",
-    "start": "node index.js"
+    "express": "^4.18.2"
   }
 }
